--- a/serverproduct/src/main/res/layout/fragment_weather_ten_day.xml
+++ b/serverproduct/src/main/res/layout/fragment_weather_ten_day.xml
@@ -36,11 +36,13 @@
             </LinearLayout>
 
             <TextView
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
                 android:id="@+id/serverproduct_tendayreporting_content_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/contentbg"
-                android:lineSpacingExtra="2dp"
+                android:lineSpacingExtra="8dp"
                 android:padding="20dp"
                 android:textColor="@color/textfont"
                 android:textSize="@dimen/content" />
