--- a/serverproduct/src/main/res/layout/policies_regulation_item.xml
+++ b/serverproduct/src/main/res/layout/policies_regulation_item.xml
@@ -5,6 +5,7 @@
     android:background="@drawable/layout_click_selector"
     android:layout_height="50dp">
     <TextView
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="60dp"
         android:ellipsize="end"
         android:maxLines="1"
