--- a/unit/src/main/res/layout/adapter_unit_batch_suggest_weather.xml
+++ b/unit/src/main/res/layout/adapter_unit_batch_suggest_weather.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
+    <com.github.mikephil.charting.charts.CombinedChart
+        android:id="@+id/line_chart_weather"
+        android:layout_width="match_parent"
+        android:layout_height="200dip" />
 </LinearLayout>
