--- a/serverproduct/src/main/res/layout/activity_dynamic_price.xml
+++ b/serverproduct/src/main/res/layout/activity_dynamic_price.xml
@@ -79,7 +79,7 @@
                    android:layout_centerVertical="true"
                    />
            </LinearLayout>
-        <com.erayic.agr.serverproduct.view.custom.NoScrollWebView
+        <com.erayic.agr.serverproduct.view.custom.FastWebView
             android:layout_margin="5dp"
             android:background="@drawable/layout_shape_all"
             android:scrollbars="none"
