--- a/unit/src/main/res/layout/activity_unit_batch_infos.xml
+++ b/unit/src/main/res/layout/activity_unit_batch_infos.xml
@@ -36,7 +36,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:layout_height="110dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
@@ -44,13 +44,13 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
+                        android:gravity="center"
                         android:layout_marginRight="5dp">
 
                         <com.erayic.agr.common.view.CircleImageView
                             android:id="@+id/unit_content_icon"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
-                            android:layout_alignParentTop="true"
                             android:layout_centerHorizontal="true"
                             app:srcCompat="@drawable/app_base_android_1" />
                     </RelativeLayout>
@@ -80,16 +80,6 @@
                                 android:textColor="@color/app_base_item_background"
                                 android:textSize="18sp" />
 
-                            <TextView
-                                android:id="@+id/unit_content_date"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:ellipsize="end"
-                                android:gravity="center_vertical|end"
-                                android:maxLines="1"
-                                android:text=""
-                                android:textColor="@color/app_base_item_background"
-                                android:textSize="12sp" />
                         </LinearLayout>
 
                         <TextView
@@ -105,6 +95,18 @@
 
                         <TextView
                             android:id="@+id/unit_content_twoName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:ellipsize="end"
+                            android:lineSpacingExtra="3dp"
+                            android:maxLines="1"
+                            android:text=""
+                            android:textColor="@color/app_base_item_background"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/unit_content_date"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
