--- a/manage/src/main/res/layout/adapter_manage_content_text_3.xml
+++ b/manage/src/main/res/layout/adapter_manage_content_text_3.xml
@@ -22,13 +22,13 @@
 
         <TextView
             android:id="@+id/manage_content_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
+            android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="center_vertical|left"
-            android:maxWidth="160dp"
             android:singleLine="true"
             android:text=""
             android:textColor="@color/app_base_text_title_1"
@@ -39,8 +39,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:gravity="end"
+            android:layout_weight="0.5"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:singleLine="true"
             android:text=""
             android:textColor="@color/app_base_text_title_3"
             android:textSize="14sp" />
